[gd_scene load_steps=8 format=4 uid="uid://5ppqgtck477u"]

[ext_resource type="PackedScene" uid="uid://sy6obgtp1un7" path="res://roomba.tscn" id="1_f3sb7"]
[ext_resource type="Texture2D" uid="uid://djmtfk478wmj6" path="res://assets/Tech Dungeon Roguelite - Asset Pack (DEMO)/tileset x2.png" id="2_dwbse"]
[ext_resource type="Script" uid="uid://8ix7eqt5y5fk" path="res://enemy_spawner.gd" id="3_tlwt5"]
[ext_resource type="Script" path="res://canvas_layer.gd" id="4_aqk2v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fj7yv"]
size = Vector2(108, 2196)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pkg7o"]
texture = ExtResource("2_dwbse")
texture_region_size = Vector2i(64, 64)
8:0/0 = 0
8:1/0 = 0
9:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
9:2/0 = 0
14:2/0 = 0
9:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
12:5/0 = 0
12:6/0 = 0
12:7/0 = 0
4:8/0 = 0
4:9/0 = 0
4:10/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
1:2/0 = 0
4:2/0 = 0
6:2/0 = 0
1:3/0 = 0
1:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
9:5/0 = 0
10:5/0 = 0
13:5/0 = 0
14:5/0 = 0
1:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
9:7/0 = 0
10:7/0 = 0
13:7/0 = 0
14:7/0 = 0
1:8/0 = 0
6:8/0 = 0
9:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
2:10/0 = 0
3:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
32:2/0 = 0
32:1/0 = 0
33:1/0 = 0
34:1/0 = 0

[sub_resource type="TileSet" id="TileSet_gbfbk"]
tile_size = Vector2i(64, 64)
sources/1 = SubResource("TileSetAtlasSource_pkg7o")

[node name="World" type="Node2D"]

[node name="Colliders" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Colliders"]
z_index = 2
position = Vector2(109, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/StaticBody2D"]
position = Vector2(-100, 543.5)
shape = SubResource("RectangleShape2D_fj7yv")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Colliders/StaticBody2D"]
position = Vector2(1925, 529)
shape = SubResource("RectangleShape2D_fj7yv")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Colliders/StaticBody2D"]
position = Vector2(869, 10)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_fj7yv")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Colliders/StaticBody2D"]
position = Vector2(857, 1084)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_fj7yv")

[node name="walls" type="TileMapLayer" parent="Colliders"]
z_index = 1
tile_map_data = PackedByteArray("AAA7ABkAAAAGAAoAAAABABAAAQACAAoAAAACABAAAQAFAAoAAAADABAAAQAFAAoAAAAEABAAAQAFAAoAAAAFABAAAQAFAAoAAAAGABAAAQAFAAoAAAAHABAAAQAFAAoAAAAIABAAAQAFAAoAAAAJABAAAQAFAAoAAAAKABAAAQAFAAoAAAALABAAAQAFAAoAAAAMABAAAQAFAAoAAAANABAAAQAFAAoAAAAOABAAAQAFAAoAAAAPABAAAQAFAAoAAAAQABAAAQAFAAoAAAARABAAAQAFAAoAAAASABAAAQAFAAoAAAATABAAAQAFAAoAAAAUABAAAQAFAAoAAAAVABAAAQAFAAoAAAAWABAAAQAFAAoAAAAXABAAAQAFAAoAAAAYABAAAQAFAAoAAAAZABAAAQAFAAoAAAAaABAAAQAFAAoAAAAbABAAAQAFAAoAAAAcABAAAQAFAAoAAAAdABAAAQAFAAoAAAAeABAAAQAIAAoAAAABAAEAAQABAAIAAAABAAIAAQABAAIAAAABAAMAAQABAAIAAAABAAQAAQABAAIAAAABAAUAAQABAAIAAAABAAYAAQABAAIAAAABAAcAAQABAAIAAAABAAgAAQABAAIAAAABAAkAAQABAAIAAAABAAoAAQABAAIAAAABAAsAAQABAAIAAAABAAwAAQABAAIAAAABAA0AAQABAAIAAAABAA4AAQABAAIAAAABAA8AAQABAAIAAAAeAAEAAQAJAAIAAAAeAAIAAQAJAAIAAAAeAAMAAQAJAAIAAAAeAAQAAQAJAAIAAAAeAAUAAQAJAAIAAAAeAAYAAQAJAAIAAAAeAAcAAQAJAAIAAAAeAAgAAQAJAAIAAAAeAAkAAQAJAAIAAAAeAAoAAQAJAAIAAAAeAAsAAQAJAAIAAAAeAAwAAQAJAAIAAAAeAA0AAQAJAAIAAAAeAA4AAQAJAAIAAAAeAA8AAQAJAAIAAAAeAAAAAQAJAAEAAAABAAAAAQABAAEAAAACAAAAAQAFAAAAAAADAAAAAQAFAAAAAAAEAAAAAQAFAAAAAAAFAAAAAQAFAAAAAAAGAAAAAQAFAAAAAAAHAAAAAQAFAAAAAAAIAAAAAQAFAAAAAAAJAAAAAQAFAAAAAAAKAAAAAQAFAAAAAAALAAAAAQAFAAAAAAAMAAAAAQAFAAAAAAANAAAAAQAFAAAAAAAOAAAAAQAFAAAAAAAPAAAAAQAFAAAAAAAQAAAAAQAFAAAAAAARAAAAAQAFAAAAAAASAAAAAQAFAAAAAAATAAAAAQAFAAAAAAAUAAAAAQAFAAAAAAAVAAAAAQAFAAAAAAAWAAAAAQAFAAAAAAAXAAAAAQAFAAAAAAAYAAAAAQAFAAAAAAAZAAAAAQAFAAAAAAAaAAAAAQAFAAAAAAAbAAAAAQAFAAAAAAAcAAAAAQAFAAAAAAAdAAAAAQAFAAAAAAA=")
tile_set = SubResource("TileSet_gbfbk")

[node name="floor" type="TileMapLayer" parent="Colliders"]
tile_map_data = PackedByteArray("AAA7ABkAAAAGAAoAAAABABAAAQAiAAEAAAACABAAAQAiAAEAAAADABAAAQAiAAEAAAAEABAAAQAiAAEAAAAFABAAAQAgAAEAAAAGABAAAQAgAAEAAAAHABAAAQAiAAEAAAAIABAAAQAiAAEAAAAJABAAAQAgAAEAAAAKABAAAQAiAAEAAAALABAAAQAiAAEAAAAMABAAAQAiAAEAAAANABAAAQAiAAEAAAAOABAAAQAiAAEAAAAPABAAAQAiAAEAAAAQABAAAQAgAAEAAAARABAAAQAiAAEAAAASABAAAQAiAAEAAAATABAAAQAgAAEAAAAUABAAAQAiAAEAAAAVABAAAQAiAAEAAAAWABAAAQAiAAEAAAAXABAAAQAhAAEAAAAYABAAAQAgAAEAAAAZABAAAQAiAAEAAAAaABAAAQAiAAEAAAAbABAAAQAiAAEAAAAcABAAAQAhAAEAAAAdABAAAQAgAAEAAAAeABAAAQAiAAEAAAAfABAAAQAiAAEAAAAeAA8AAQAiAAEAAAAeAA4AAQAiAAEAAAAeAA0AAQAiAAEAAAAeAAwAAQAiAAEAAAAeAAsAAQAiAAEAAAAeAAoAAQAiAAEAAAAfAAoAAQAhAAEAAAAfAAkAAQAhAAEAAAAfAAgAAQAhAAEAAAAfAAcAAQAhAAEAAAAfAAYAAQAhAAEAAAAfAAUAAQAiAAEAAAAfAAQAAQAiAAEAAAAfAAMAAQAhAAEAAAAeAAMAAQAiAAEAAAAeAAIAAQAiAAEAAAAeAAEAAQAiAAEAAAABAAEAAQAhAAEAAAACAAEAAQAiAAEAAAADAAEAAQAgAAEAAAAEAAEAAQAhAAEAAAAFAAEAAQAiAAEAAAAGAAEAAQAiAAEAAAAHAAEAAQAhAAEAAAAIAAEAAQAiAAEAAAAJAAEAAQAiAAEAAAAKAAEAAQAiAAEAAAALAAEAAQAiAAEAAAAMAAAAAQAiAAEAAAANAAAAAQAiAAEAAAAOAAAAAQAiAAEAAAAPAAAAAQAiAAEAAAAQAAAAAQAiAAEAAAARAAAAAQAiAAEAAAASAAAAAQAiAAEAAAATAAAAAQAiAAEAAAAUAAAAAQAiAAEAAAAUAAEAAQAiAAEAAAAVAAEAAQAiAAEAAAAWAAEAAQAhAAEAAAAXAAEAAQAiAAEAAAAYAAEAAQAgAAEAAAAZAAEAAQAiAAEAAAAaAAEAAQAgAAEAAAAbAAEAAQAiAAEAAAAcAAEAAQAiAAEAAAAdAAEAAQAiAAEAAAABAAIAAQAhAAEAAAABAAMAAQAiAAEAAAABAAQAAQAiAAEAAAABAAUAAQAiAAEAAAABAAYAAQAiAAEAAAABAAcAAQAiAAEAAAABAAgAAQAgAAIAAAABAAkAAQAiAAEAAAABAAoAAQAiAAEAAAABAAsAAQAgAAEAAAABAAwAAQAiAAEAAAABAA0AAQAiAAEAAAABAA4AAQAhAAEAAAABAA8AAQAiAAEAAAABABEAAQAgAAIAAAABABIAAQAiAAEAAAACAAIAAQAiAAEAAAACAAMAAQAiAAEAAAACAAQAAQAiAAEAAAACAAUAAQAgAAEAAAACAAYAAQAiAAEAAAACAAcAAQAgAAEAAAACAAgAAQAhAAEAAAACAAkAAQAiAAEAAAACAAoAAQAiAAEAAAACAAsAAQAiAAEAAAACAAwAAQAiAAEAAAACAA0AAQAiAAEAAAACAA4AAQAiAAEAAAACAA8AAQAiAAEAAAADAAIAAQAiAAEAAAADAAMAAQAgAAEAAAADAAQAAQAhAAEAAAADAAUAAQAiAAEAAAADAAYAAQAhAAEAAAADAAcAAQAiAAEAAAADAAgAAQAgAAEAAAADAAkAAQAiAAEAAAADAAoAAQAiAAEAAAADAAsAAQAiAAEAAAADAAwAAQAiAAEAAAADAA0AAQAiAAEAAAADAA4AAQAhAAEAAAADAA8AAQAhAAEAAAAEAAIAAQAhAAEAAAAEAAMAAQAiAAEAAAAEAAQAAQAiAAEAAAAEAAUAAQAiAAEAAAAEAAYAAQAiAAEAAAAEAAcAAQAiAAEAAAAEAAgAAQAiAAEAAAAEAAkAAQAiAAEAAAAEAAoAAQAiAAEAAAAEAAsAAQAiAAEAAAAEAAwAAQAiAAEAAAAEAA0AAQAgAAIAAAAEAA4AAQAiAAEAAAAEAA8AAQAiAAEAAAAFAAIAAQAiAAEAAAAFAAMAAQAiAAEAAAAFAAQAAQAiAAEAAAAFAAUAAQAhAAEAAAAFAAYAAQAiAAEAAAAFAAcAAQAiAAEAAAAFAAgAAQAiAAEAAAAFAAkAAQAiAAEAAAAFAAoAAQAiAAEAAAAFAAsAAQAiAAEAAAAFAAwAAQAiAAEAAAAFAA0AAQAiAAEAAAAFAA4AAQAgAAIAAAAFAA8AAQAiAAEAAAAGAAIAAQAhAAEAAAAGAAMAAQAiAAEAAAAGAAQAAQAgAAEAAAAGAAUAAQAiAAEAAAAGAAYAAQAhAAEAAAAGAAcAAQAgAAIAAAAGAAgAAQAgAAIAAAAGAAkAAQAiAAEAAAAGAAoAAQAiAAEAAAAGAAsAAQAiAAEAAAAGAAwAAQAiAAEAAAAGAA0AAQAiAAEAAAAGAA4AAQAgAAEAAAAGAA8AAQAiAAEAAAAHAAIAAQAhAAEAAAAHAAMAAQAgAAEAAAAHAAQAAQAiAAEAAAAHAAUAAQAiAAEAAAAHAAYAAQAiAAEAAAAHAAcAAQAiAAEAAAAHAAgAAQAiAAEAAAAHAAkAAQAhAAEAAAAHAAoAAQAiAAEAAAAHAAsAAQAiAAEAAAAHAAwAAQAiAAEAAAAHAA0AAQAiAAEAAAAHAA4AAQAiAAEAAAAHAA8AAQAiAAEAAAAIAAIAAQAiAAEAAAAIAAMAAQAiAAEAAAAIAAQAAQAiAAEAAAAIAAUAAQAiAAEAAAAIAAYAAQAiAAEAAAAIAAcAAQAiAAEAAAAIAAgAAQAhAAEAAAAIAAkAAQAiAAEAAAAIAAoAAQAiAAEAAAAIAAsAAQAiAAEAAAAIAAwAAQAiAAEAAAAIAA0AAQAiAAEAAAAIAA4AAQAiAAEAAAAIAA8AAQAiAAEAAAAJAAIAAQAiAAEAAAAJAAMAAQAiAAEAAAAJAAQAAQAiAAEAAAAJAAUAAQAgAAEAAAAJAAYAAQAiAAEAAAAJAAcAAQAgAAIAAAAJAAgAAQAiAAEAAAAJAAkAAQAiAAEAAAAJAAoAAQAiAAEAAAAJAAsAAQAiAAEAAAAJAAwAAQAgAAEAAAAJAA0AAQAiAAEAAAAJAA4AAQAiAAEAAAAJAA8AAQAiAAEAAAAKAAIAAQAiAAEAAAAKAAMAAQAiAAEAAAAKAAQAAQAiAAEAAAAKAAUAAQAiAAEAAAAKAAYAAQAiAAEAAAAKAAcAAQAiAAEAAAAKAAgAAQAiAAEAAAAKAAkAAQAiAAEAAAAKAAoAAQAhAAEAAAAKAAsAAQAiAAEAAAAKAAwAAQAgAAIAAAAKAA0AAQAhAAEAAAAKAA4AAQAiAAEAAAAKAA8AAQAiAAEAAAALAAIAAQAiAAEAAAALAAMAAQAiAAEAAAALAAQAAQAgAAEAAAALAAUAAQAiAAEAAAALAAYAAQAgAAEAAAALAAcAAQAiAAEAAAALAAgAAQAiAAEAAAALAAkAAQAiAAEAAAALAAoAAQAiAAEAAAALAAsAAQAiAAEAAAALAAwAAQAiAAEAAAALAA0AAQAiAAEAAAALAA4AAQAiAAEAAAALAA8AAQAiAAEAAAAMAAEAAQAiAAEAAAAMAAIAAQAiAAEAAAAMAAMAAQAiAAEAAAAMAAQAAQAhAAEAAAAMAAUAAQAiAAEAAAAMAAYAAQAiAAEAAAAMAAcAAQAiAAEAAAAMAAgAAQAiAAEAAAAMAAkAAQAhAAEAAAAMAAoAAQAiAAEAAAAMAAsAAQAiAAEAAAAMAAwAAQAiAAEAAAAMAA0AAQAgAAIAAAAMAA4AAQAgAAEAAAAMAA8AAQAiAAEAAAANAAEAAQAiAAEAAAANAAIAAQAhAAEAAAANAAMAAQAiAAEAAAANAAQAAQAiAAEAAAANAAUAAQAiAAEAAAANAAYAAQAgAAIAAAANAAcAAQAiAAEAAAANAAgAAQAiAAEAAAANAAkAAQAiAAEAAAANAAoAAQAiAAEAAAANAAsAAQAiAAEAAAANAAwAAQAiAAEAAAANAA0AAQAiAAEAAAANAA4AAQAiAAEAAAANAA8AAQAgAAIAAAAOAAEAAQAiAAEAAAAOAAIAAQAiAAEAAAAOAAMAAQAiAAEAAAAOAAQAAQAiAAEAAAAOAAUAAQAgAAIAAAAOAAYAAQAiAAEAAAAOAAcAAQAiAAEAAAAOAAgAAQAiAAEAAAAOAAkAAQAiAAEAAAAOAAoAAQAhAAEAAAAOAAsAAQAiAAEAAAAOAAwAAQAiAAEAAAAOAA0AAQAiAAEAAAAOAA4AAQAiAAEAAAAOAA8AAQAiAAEAAAAPAAEAAQAiAAEAAAAPAAIAAQAiAAEAAAAPAAMAAQAiAAEAAAAPAAQAAQAiAAEAAAAPAAUAAQAiAAEAAAAPAAYAAQAiAAEAAAAPAAcAAQAiAAEAAAAPAAgAAQAhAAEAAAAPAAkAAQAiAAEAAAAPAAoAAQAiAAEAAAAPAAsAAQAiAAEAAAAPAAwAAQAiAAEAAAAPAA0AAQAiAAEAAAAPAA4AAQAiAAEAAAAPAA8AAQAiAAEAAAAQAAEAAQAiAAEAAAAQAAIAAQAiAAEAAAAQAAMAAQAiAAEAAAAQAAQAAQAiAAEAAAAQAAUAAQAiAAEAAAAQAAYAAQAiAAEAAAAQAAcAAQAiAAEAAAAQAAgAAQAiAAEAAAAQAAkAAQAiAAEAAAAQAAoAAQAiAAEAAAAQAAsAAQAiAAEAAAAQAAwAAQAiAAEAAAAQAA0AAQAiAAEAAAAQAA4AAQAiAAEAAAAQAA8AAQAiAAEAAAARAAEAAQAiAAEAAAARAAIAAQAiAAEAAAARAAMAAQAiAAEAAAARAAQAAQAiAAEAAAARAAUAAQAiAAEAAAARAAYAAQAiAAEAAAARAAcAAQAiAAEAAAARAAgAAQAhAAEAAAARAAkAAQAiAAEAAAARAAoAAQAiAAEAAAARAAsAAQAiAAEAAAARAAwAAQAiAAEAAAARAA0AAQAiAAEAAAARAA4AAQAiAAEAAAARAA8AAQAiAAEAAAASAAEAAQAiAAEAAAASAAIAAQAgAAEAAAASAAMAAQAiAAEAAAASAAQAAQAgAAEAAAASAAUAAQAiAAEAAAASAAYAAQAiAAEAAAASAAcAAQAhAAEAAAASAAgAAQAiAAEAAAASAAkAAQAiAAEAAAASAAoAAQAiAAEAAAASAAsAAQAiAAEAAAASAAwAAQAiAAEAAAASAA0AAQAiAAEAAAASAA4AAQAiAAEAAAASAA8AAQAiAAEAAAATAAEAAQAiAAEAAAATAAIAAQAiAAEAAAATAAMAAQAiAAEAAAATAAQAAQAiAAEAAAATAAUAAQAiAAEAAAATAAYAAQAiAAEAAAATAAcAAQAiAAEAAAATAAgAAQAgAAIAAAATAAkAAQAhAAEAAAATAAoAAQAiAAEAAAATAAsAAQAiAAEAAAATAAwAAQAiAAEAAAATAA0AAQAiAAEAAAATAA4AAQAiAAEAAAATAA8AAQAiAAEAAAAUAAIAAQAiAAEAAAAUAAMAAQAiAAEAAAAUAAQAAQAhAAEAAAAUAAUAAQAiAAEAAAAUAAYAAQAiAAEAAAAUAAcAAQAiAAEAAAAUAAgAAQAgAAEAAAAUAAkAAQAiAAEAAAAUAAoAAQAiAAEAAAAUAAsAAQAiAAEAAAAUAAwAAQAgAAEAAAAUAA0AAQAiAAEAAAAUAA4AAQAiAAEAAAAUAA8AAQAiAAEAAAAVAAIAAQAiAAEAAAAVAAMAAQAiAAEAAAAVAAQAAQAiAAEAAAAVAAUAAQAiAAEAAAAVAAYAAQAiAAEAAAAVAAcAAQAiAAEAAAAVAAgAAQAgAAEAAAAVAAkAAQAiAAEAAAAVAAoAAQAiAAEAAAAVAAsAAQAiAAEAAAAVAAwAAQAiAAEAAAAVAA0AAQAiAAEAAAAVAA4AAQAiAAEAAAAVAA8AAQAiAAEAAAAWAAIAAQAiAAEAAAAWAAMAAQAiAAEAAAAWAAQAAQAiAAEAAAAWAAUAAQAiAAEAAAAWAAYAAQAiAAEAAAAWAAcAAQAiAAEAAAAWAAgAAQAiAAEAAAAWAAkAAQAiAAEAAAAWAAoAAQAiAAEAAAAWAAsAAQAiAAEAAAAWAAwAAQAiAAEAAAAWAA0AAQAiAAEAAAAWAA4AAQAiAAEAAAAWAA8AAQAiAAEAAAAXAAIAAQAgAAIAAAAXAAMAAQAiAAEAAAAXAAQAAQAiAAEAAAAXAAUAAQAiAAEAAAAXAAYAAQAiAAEAAAAXAAcAAQAiAAEAAAAXAAgAAQAiAAEAAAAXAAkAAQAiAAEAAAAXAAoAAQAiAAEAAAAXAAsAAQAiAAEAAAAXAAwAAQAhAAEAAAAXAA0AAQAiAAEAAAAXAA4AAQAiAAEAAAAXAA8AAQAiAAEAAAAYAAIAAQAiAAEAAAAYAAMAAQAiAAEAAAAYAAQAAQAiAAEAAAAYAAUAAQAiAAEAAAAYAAYAAQAgAAIAAAAYAAcAAQAiAAEAAAAYAAgAAQAiAAEAAAAYAAkAAQAgAAIAAAAYAAoAAQAhAAEAAAAYAAsAAQAiAAEAAAAYAAwAAQAhAAEAAAAYAA0AAQAiAAEAAAAYAA4AAQAiAAEAAAAYAA8AAQAiAAEAAAAZAAIAAQAiAAEAAAAZAAMAAQAiAAEAAAAZAAQAAQAiAAEAAAAZAAUAAQAiAAEAAAAZAAYAAQAhAAEAAAAZAAcAAQAiAAEAAAAZAAgAAQAiAAEAAAAZAAkAAQAgAAIAAAAZAAoAAQAiAAEAAAAZAAsAAQAiAAEAAAAZAAwAAQAiAAEAAAAZAA0AAQAiAAEAAAAZAA4AAQAiAAEAAAAZAA8AAQAhAAEAAAAaAAIAAQAiAAEAAAAaAAMAAQAgAAIAAAAaAAQAAQAiAAEAAAAaAAUAAQAiAAEAAAAaAAYAAQAiAAEAAAAaAAcAAQAiAAEAAAAaAAgAAQAiAAEAAAAaAAkAAQAiAAEAAAAaAAoAAQAiAAEAAAAaAAsAAQAhAAEAAAAaAAwAAQAiAAEAAAAaAA0AAQAiAAEAAAAaAA4AAQAiAAEAAAAaAA8AAQAiAAEAAAAbAAIAAQAiAAEAAAAbAAMAAQAiAAEAAAAbAAQAAQAiAAEAAAAbAAUAAQAiAAEAAAAbAAYAAQAhAAEAAAAbAAcAAQAiAAEAAAAbAAgAAQAgAAIAAAAbAAkAAQAiAAEAAAAbAAoAAQAiAAEAAAAbAAsAAQAiAAEAAAAbAAwAAQAiAAEAAAAbAA0AAQAiAAEAAAAbAA4AAQAhAAEAAAAbAA8AAQAiAAEAAAAcAAIAAQAiAAEAAAAcAAMAAQAiAAEAAAAcAAQAAQAiAAEAAAAcAAUAAQAiAAEAAAAcAAYAAQAiAAEAAAAcAAcAAQAiAAEAAAAcAAgAAQAiAAEAAAAcAAkAAQAhAAEAAAAcAAoAAQAiAAEAAAAcAAsAAQAiAAEAAAAcAAwAAQAiAAEAAAAcAA0AAQAhAAEAAAAcAA4AAQAgAAEAAAAcAA8AAQAiAAEAAAAdAAIAAQAiAAEAAAAdAAMAAQAiAAEAAAAdAAQAAQAiAAEAAAAdAAUAAQAiAAEAAAAdAAYAAQAiAAEAAAAdAAcAAQAgAAIAAAAdAAgAAQAiAAEAAAAdAAkAAQAhAAEAAAAdAAoAAQAiAAEAAAAdAAsAAQAiAAEAAAAdAAwAAQAiAAEAAAAdAA0AAQAiAAEAAAAdAA4AAQAiAAEAAAAdAA8AAQAiAAEAAAAeAAQAAQAiAAEAAAAeAAUAAQAiAAEAAAAeAAYAAQAiAAEAAAAeAAcAAQAiAAEAAAAeAAgAAQAhAAEAAAAeAAkAAQAiAAEAAAD+//z/AQAiAAEAAAD+//3/AQAiAAEAAAD+//7/AQAiAAEAAAD+////AQAiAAEAAAD+/wAAAQAgAAIAAAD+/wEAAQAgAAIAAAD+/wIAAQAiAAEAAAD+/wMAAQAhAAEAAAD+/wQAAQAiAAEAAAD+/wUAAQAiAAEAAAD+/wYAAQAiAAEAAAD+/wcAAQAhAAEAAAD+/wgAAQAiAAEAAAD+/wkAAQAiAAEAAAD+/woAAQAiAAEAAAD+/wsAAQAiAAEAAAD+/wwAAQAiAAEAAAD+/w0AAQAgAAIAAAD+/w4AAQAiAAEAAAD+/w8AAQAiAAEAAAD+/xAAAQAiAAEAAAD+/xEAAQAiAAEAAAD+/xIAAQAiAAEAAAD+/xMAAQAiAAEAAAD///z/AQAiAAEAAAD///3/AQAiAAEAAAD///7/AQAiAAEAAAD/////AQAiAAEAAAD//wAAAQAiAAEAAAD//wEAAQAiAAEAAAD//wIAAQAiAAEAAAD//wMAAQAiAAEAAAD//wQAAQAiAAEAAAD//wUAAQAiAAEAAAD//wYAAQAhAAEAAAD//wcAAQAiAAEAAAD//wgAAQAiAAEAAAD//wkAAQAiAAEAAAD//woAAQAiAAEAAAD//wsAAQAiAAEAAAD//wwAAQAiAAEAAAD//w0AAQAiAAEAAAD//w4AAQAiAAEAAAD//w8AAQAiAAEAAAD//xAAAQAgAAEAAAD//xEAAQAiAAEAAAD//xIAAQAiAAEAAAD//xMAAQAiAAEAAAAAAPz/AQAiAAEAAAAAAP3/AQAiAAEAAAAAAP7/AQAiAAEAAAAAAP//AQAiAAEAAAAAAAAAAQAiAAEAAAAAAAEAAQAiAAEAAAAAAAIAAQAiAAEAAAAAAAMAAQAiAAEAAAAAAAQAAQAhAAEAAAAAAAUAAQAiAAEAAAAAAAYAAQAiAAEAAAAAAAcAAQAiAAEAAAAAAAgAAQAiAAEAAAAAAAkAAQAiAAEAAAAAAAoAAQAiAAEAAAAAAAsAAQAgAAIAAAAAAAwAAQAiAAEAAAAAAA0AAQAgAAIAAAAAAA4AAQAhAAEAAAAAAA8AAQAiAAEAAAAAABAAAQAgAAEAAAAAABEAAQAiAAEAAAAAABIAAQAiAAEAAAAAABMAAQAiAAEAAAABAPz/AQAiAAEAAAABAP3/AQAiAAEAAAABAP7/AQAiAAEAAAABAP//AQAgAAEAAAABAAAAAQAiAAEAAAABABMAAQAiAAEAAAACAPz/AQAiAAEAAAACAP3/AQAiAAEAAAACAP7/AQAhAAEAAAACAP//AQAiAAEAAAACAAAAAQAiAAEAAAACABEAAQAiAAEAAAACABIAAQAiAAEAAAACABMAAQAiAAEAAAADAPz/AQAiAAEAAAADAP3/AQAiAAEAAAADAP7/AQAiAAEAAAADAP//AQAiAAEAAAADAAAAAQAiAAEAAAADABEAAQAiAAEAAAADABIAAQAgAAIAAAADABMAAQAiAAEAAAAEAPz/AQAhAAEAAAAEAP3/AQAiAAEAAAAEAP7/AQAiAAEAAAAEAP//AQAiAAEAAAAEAAAAAQAiAAEAAAAEABEAAQAiAAEAAAAEABIAAQAiAAEAAAAEABMAAQAiAAEAAAAFAPz/AQAgAAEAAAAFAP3/AQAiAAEAAAAFAP7/AQAgAAEAAAAFAP//AQAiAAEAAAAFAAAAAQAiAAEAAAAFABEAAQAiAAEAAAAFABIAAQAiAAEAAAAFABMAAQAgAAEAAAAGAPz/AQAgAAEAAAAGAP3/AQAiAAEAAAAGAP7/AQAiAAEAAAAGAP//AQAiAAEAAAAGAAAAAQAiAAEAAAAGABEAAQAiAAEAAAAGABIAAQAiAAEAAAAGABMAAQAiAAEAAAAHAPz/AQAhAAEAAAAHAP3/AQAiAAEAAAAHAP7/AQAiAAEAAAAHAP//AQAiAAEAAAAHAAAAAQAiAAEAAAAHABEAAQAiAAEAAAAHABIAAQAiAAEAAAAHABMAAQAiAAEAAAAIAPz/AQAiAAEAAAAIAP3/AQAiAAEAAAAIAP7/AQAiAAEAAAAIAP//AQAiAAEAAAAIAAAAAQAiAAEAAAAIABEAAQAiAAEAAAAIABIAAQAgAAIAAAAIABMAAQAiAAEAAAAJAPz/AQAiAAEAAAAJAP3/AQAiAAEAAAAJAP7/AQAiAAEAAAAJAP//AQAiAAEAAAAJAAAAAQAiAAEAAAAJABEAAQAiAAEAAAAJABIAAQAiAAEAAAAJABMAAQAiAAEAAAAKAPz/AQAiAAEAAAAKAP3/AQAiAAEAAAAKAP7/AQAiAAEAAAAKAP//AQAiAAEAAAAKAAAAAQAiAAEAAAAKABEAAQAiAAEAAAAKABIAAQAiAAEAAAAKABMAAQAiAAEAAAALAPz/AQAiAAEAAAALAP3/AQAiAAEAAAALAP7/AQAiAAEAAAALAP//AQAiAAEAAAALAAAAAQAhAAEAAAALABEAAQAiAAEAAAALABIAAQAiAAEAAAALABMAAQAiAAEAAAAMAPz/AQAiAAEAAAAMAP3/AQAiAAEAAAAMAP7/AQAiAAEAAAAMAP//AQAiAAEAAAAMABEAAQAgAAIAAAAMABIAAQAgAAEAAAAMABMAAQAiAAEAAAANAPz/AQAiAAEAAAANAP3/AQAiAAEAAAANAP7/AQAgAAEAAAANAP//AQAhAAEAAAANABEAAQAiAAEAAAANABIAAQAhAAEAAAANABMAAQAiAAEAAAAOAPz/AQAiAAEAAAAOAP3/AQAiAAEAAAAOAP7/AQAhAAEAAAAOAP//AQAgAAEAAAAOABEAAQAiAAEAAAAOABIAAQAiAAEAAAAOABMAAQAgAAEAAAAPAPz/AQAiAAEAAAAPAP3/AQAiAAEAAAAPAP7/AQAiAAEAAAAPAP//AQAiAAEAAAAPABEAAQAiAAEAAAAPABIAAQAiAAEAAAAPABMAAQAiAAEAAAAQAPz/AQAiAAEAAAAQAP3/AQAiAAEAAAAQAP7/AQAiAAEAAAAQAP//AQAiAAEAAAAQABEAAQAiAAEAAAAQABIAAQAiAAEAAAAQABMAAQAhAAEAAAARAPz/AQAiAAEAAAARAP3/AQAiAAEAAAARAP7/AQAiAAEAAAARAP//AQAhAAEAAAARABEAAQAgAAEAAAARABIAAQAiAAEAAAARABMAAQAiAAEAAAASAPz/AQAiAAEAAAASAP3/AQAiAAEAAAASAP7/AQAiAAEAAAASAP//AQAiAAEAAAASABEAAQAhAAEAAAASABIAAQAgAAIAAAASABMAAQAiAAEAAAATAPz/AQAiAAEAAAATAP3/AQAiAAEAAAATAP7/AQAiAAEAAAATAP//AQAiAAEAAAATABEAAQAiAAEAAAATABIAAQAhAAEAAAATABMAAQAiAAEAAAAUAPz/AQAiAAEAAAAUAP3/AQAiAAEAAAAUAP7/AQAiAAEAAAAUAP//AQAiAAEAAAAUABEAAQAiAAEAAAAUABIAAQAiAAEAAAAUABMAAQAiAAEAAAAVAPz/AQAiAAEAAAAVAP3/AQAgAAIAAAAVAP7/AQAiAAEAAAAVAP//AQAiAAEAAAAVAAAAAQAiAAEAAAAVABEAAQAhAAEAAAAVABIAAQAiAAEAAAAVABMAAQAiAAEAAAAWAPz/AQAiAAEAAAAWAP3/AQAiAAEAAAAWAP7/AQAiAAEAAAAWAP//AQAiAAEAAAAWAAAAAQAiAAEAAAAWABEAAQAiAAEAAAAWABIAAQAiAAEAAAAWABMAAQAiAAEAAAAXAPz/AQAiAAEAAAAXAP3/AQAiAAEAAAAXAP7/AQAiAAEAAAAXAP//AQAiAAEAAAAXAAAAAQAiAAEAAAAXABEAAQAiAAEAAAAXABIAAQAiAAEAAAAXABMAAQAgAAIAAAAYAPz/AQAiAAEAAAAYAP3/AQAiAAEAAAAYAP7/AQAiAAEAAAAYAP//AQAiAAEAAAAYAAAAAQAiAAEAAAAYABEAAQAiAAEAAAAYABIAAQAiAAEAAAAYABMAAQAiAAEAAAAZAPz/AQAiAAEAAAAZAP3/AQAiAAEAAAAZAP7/AQAiAAEAAAAZAP//AQAiAAEAAAAZAAAAAQAiAAEAAAAZABEAAQAiAAEAAAAZABIAAQAiAAEAAAAZABMAAQAiAAEAAAAaAPz/AQAiAAEAAAAaAP3/AQAiAAEAAAAaAP7/AQAiAAEAAAAaAP//AQAiAAEAAAAaAAAAAQAiAAEAAAAaABEAAQAiAAEAAAAaABIAAQAiAAEAAAAaABMAAQAiAAEAAAAbAPz/AQAiAAEAAAAbAP3/AQAiAAEAAAAbAP7/AQAiAAEAAAAbAP//AQAiAAEAAAAbAAAAAQAiAAEAAAAbABEAAQAiAAEAAAAbABIAAQAiAAEAAAAbABMAAQAiAAEAAAAcAPz/AQAiAAEAAAAcAP3/AQAgAAEAAAAcAP7/AQAiAAEAAAAcAP//AQAiAAEAAAAcAAAAAQAiAAEAAAAcABEAAQAiAAEAAAAcABIAAQAiAAEAAAAcABMAAQAiAAEAAAAdAPz/AQAiAAEAAAAdAP3/AQAiAAEAAAAdAP7/AQAhAAEAAAAdAP//AQAiAAEAAAAdAAAAAQAiAAEAAAAdABEAAQAiAAEAAAAdABIAAQAiAAEAAAAdABMAAQAiAAEAAAAeAPz/AQAiAAEAAAAeAP3/AQAhAAEAAAAeAP7/AQAiAAEAAAAeAP//AQAiAAEAAAAeAAAAAQAiAAEAAAAeABEAAQAiAAEAAAAeABIAAQAiAAEAAAAeABMAAQAiAAEAAAAfAPz/AQAiAAEAAAAfAP3/AQAiAAEAAAAfAP7/AQAiAAEAAAAfAP//AQAiAAEAAAAfAAAAAQAiAAEAAAAfAAEAAQAiAAEAAAAfAAIAAQAiAAEAAAAfAAsAAQAiAAEAAAAfAAwAAQAiAAEAAAAfAA0AAQAiAAEAAAAfAA4AAQAiAAEAAAAfAA8AAQAiAAEAAAAfABEAAQAiAAEAAAAfABIAAQAiAAEAAAAfABMAAQAiAAEAAAAgAPz/AQAgAAEAAAAgAP3/AQAiAAEAAAAgAP7/AQAiAAEAAAAgAP//AQAgAAEAAAAgAAAAAQAiAAEAAAAgAAEAAQAiAAEAAAAgAAIAAQAiAAEAAAAgAAMAAQAhAAEAAAAgAAQAAQAhAAEAAAAgAAUAAQAiAAEAAAAgAAYAAQAiAAEAAAAgAAcAAQAiAAEAAAAgAAgAAQAiAAEAAAAgAAkAAQAgAAIAAAAgAAoAAQAiAAEAAAAgAAsAAQAiAAEAAAAgAAwAAQAiAAEAAAAgAA0AAQAiAAEAAAAgAA4AAQAiAAEAAAAgAA8AAQAiAAEAAAAgABAAAQAiAAEAAAAgABEAAQAiAAEAAAAgABIAAQAiAAEAAAAgABMAAQAiAAEAAAAhAPz/AQAiAAEAAAAhAP3/AQAgAAEAAAAhAP7/AQAiAAEAAAAhAP//AQAgAAIAAAAhAAAAAQAiAAEAAAAhAAEAAQAgAAIAAAAhAAIAAQAiAAEAAAAhAAMAAQAhAAEAAAAhAAQAAQAiAAEAAAAhAAUAAQAiAAEAAAAhAAYAAQAiAAEAAAAhAAcAAQAiAAEAAAAhAAgAAQAiAAEAAAAhAAkAAQAiAAEAAAAhAAoAAQAiAAEAAAAhAAsAAQAhAAEAAAAhAAwAAQAiAAEAAAAhAA0AAQAiAAEAAAAhAA4AAQAhAAEAAAAhAA8AAQAiAAEAAAAhABAAAQAiAAEAAAAhABEAAQAgAAEAAAAhABIAAQAiAAEAAAAhABMAAQAiAAEAAAAiAPz/AQAiAAEAAAAiAP3/AQAiAAEAAAAiAP7/AQAiAAEAAAAiAP//AQAgAAEAAAAiAAAAAQAiAAEAAAAiAAEAAQAiAAEAAAAiAAIAAQAhAAEAAAAiAAMAAQAiAAEAAAAiAAQAAQAiAAEAAAAiAAUAAQAiAAEAAAAiAAYAAQAiAAEAAAAiAAcAAQAiAAEAAAAiAAgAAQAiAAEAAAAiAAkAAQAiAAEAAAAiAAoAAQAiAAEAAAAiAAsAAQAgAAEAAAAiAAwAAQAiAAEAAAAiAA0AAQAiAAEAAAAiAA4AAQAiAAEAAAAiAA8AAQAiAAEAAAAiABAAAQAiAAEAAAAiABEAAQAiAAEAAAAiABIAAQAiAAEAAAAiABMAAQAgAAEAAAAjAPz/AQAiAAEAAAAjAP3/AQAiAAEAAAAjAP7/AQAiAAEAAAAjAP//AQAiAAEAAAAjAAAAAQAiAAEAAAAjAAEAAQAiAAEAAAAjAAIAAQAiAAEAAAAjAAMAAQAiAAEAAAAjAAQAAQAiAAEAAAAjAAUAAQAiAAEAAAAjAAYAAQAiAAEAAAAjAAcAAQAiAAEAAAAjAAgAAQAiAAEAAAAjAAkAAQAiAAEAAAAjAAoAAQAgAAEAAAAjAAsAAQAiAAEAAAAjAAwAAQAiAAEAAAAjAA0AAQAiAAEAAAAjAA4AAQAiAAEAAAAjAA8AAQAiAAEAAAAjABAAAQAiAAEAAAAjABEAAQAiAAEAAAAjABIAAQAiAAEAAAAjABMAAQAhAAEAAAAkAPz/AQAiAAEAAAAkAP3/AQAiAAEAAAAkAP7/AQAiAAEAAAAkAP//AQAhAAEAAAAkAAAAAQAiAAEAAAAkAAEAAQAiAAEAAAAkAAIAAQAiAAEAAAAkAAMAAQAgAAEAAAAkAAQAAQAhAAEAAAAkAAUAAQAiAAEAAAAkAAYAAQAiAAEAAAAkAAcAAQAiAAEAAAAkAAgAAQAiAAEAAAAkAAkAAQAhAAEAAAAkAAoAAQAiAAEAAAAkAAsAAQAiAAEAAAAkAAwAAQAiAAEAAAAkAA0AAQAiAAEAAAAkAA4AAQAhAAEAAAAkAA8AAQAiAAEAAAAkABAAAQAiAAEAAAAkABEAAQAiAAEAAAAkABIAAQAiAAEAAAAkABMAAQAiAAEAAAA=")
tile_set = SubResource("TileSet_gbfbk")

[node name="Roomba" parent="." instance=ExtResource("1_f3sb7")]
position = Vector2(548, 413)

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource("3_tlwt5")

[node name="Timer" type="Timer" parent="EnemySpawner"]
wait_time = 0.09
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="." node_paths=PackedStringArray("roomba")]
script = ExtResource("4_aqk2v")
rotate_speed = 3.0
roomba = NodePath("../Roomba")

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="TopBar" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="ScoreLabel" type="Label" parent="CanvasLayer/Control/TopBar"]
layout_mode = 2
text = "dfaadffdadf"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Control/MarginContainer"]
layout_mode = 2

[connection signal="score_increment" from="Roomba" to="CanvasLayer" method="_on_roomba_score_increment"]
[connection signal="timeout" from="EnemySpawner/Timer" to="EnemySpawner" method="_on_timer_timeout"]
